--- a/web/schedule/src/app/component/gradebook/gradebook.component.html
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.html
@@ -1,3 +1,36 @@
-<p>
-  gradebook works!
-</p>
+<div class="content-container">
+  <div class="gradebook-container">
+  <table class="gradebook-table">
+    <tr>
+      <th>Семестр</th>
+      <th>Год</th>
+      <th>Предмет</th>
+      <th>Оценка</th>
+    </tr>
+    <tr class="row" >
+      <td>1</td>
+      <td>2017/2018</td>
+      <td>АЛОЦВМ</td>
+      <td>6</td>
+    </tr>
+    <tr class="row" >
+      <td>1</td>
+      <td>2017/2018</td>
+      <td>ОАиП</td>
+      <td>9</td>
+    </tr>
+    <tr class="row" >
+      <td>1</td>
+      <td>2017/2018</td>
+      <td>Математика</td>
+      <td>8</td>
+    </tr>
+    <tr class="row" >
+      <td>1</td>
+      <td>2017/2018</td>
+      <td>ОИТ</td>
+      <td>6</td>
+    </tr>
+  </table>
+</div>
+</div>
