--- a/web/schedule/src/app/component/group/group.component.html
+++ b/web/schedule/src/app/component/group/group.component.html
@@ -1,3 +1,36 @@
-<p>
-  group works!
-</p>
+<div class="content-container">
+  <div class="group-container">
+<table class="group-table">
+  <tr>
+    <th>Id</th>
+    <th>Фамилия</th>
+    <th>Имя</th>
+    <th>Отчество</th>
+  </tr>
+  <tr class="row" >
+    <td>1</td>
+    <td>Милешко</td>
+    <td>Олеся</td>
+    <td>Анатольевна</td>
+  </tr>
+  <tr class="row" >
+    <td>1</td>
+    <td>Милешко</td>
+    <td>Олеся</td>
+    <td>Анатольевна</td>
+  </tr>
+  <tr class="row" >
+    <td>1</td>
+    <td>Милешко</td>
+    <td>Олеся</td>
+    <td>Анатольевна</td>
+  </tr>
+  <tr class="row" >
+    <td>1</td>
+    <td>Милешко</td>
+    <td>Олеся</td>
+    <td>Анатольевна</td>
+  </tr>
+</table>
+</div>
+</div>
