--- a/web/schedule/src/app/component/navigation/navigation.component.scss
+++ b/web/schedule/src/app/component/navigation/navigation.component.scss
@@ -17,6 +17,8 @@
   font-size: 18px;
   line-height: 25px;
   border-radius: 5px;
+  width: 120px;
+
 }
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
@@ -29,12 +31,16 @@
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+
 }
 
 /* Style the active/current link*/
 .topnav a.active {
   background-color: #9c6ea6;
   color: white;
+  width: 40px;
+  border-right: 5px solid  #f1f1f1;
+  border-left: 5px solid  #f1f1f1;
 }
 
 @media screen and (max-width: 500px) {
