--- a/web/schedule/src/app/component/register-student/register-student.component.html
+++ b/web/schedule/src/app/component/register-student/register-student.component.html
@@ -1,3 +1,36 @@
-<p>
-  register-student works!
-</p>
+<div class="content-container">
+  <div class="register-container">
+    <div id="register">
+      <form class="register-form" (ngSubmit)="register()">
+        <fieldset class="clearfix">
+          <div class="text">Регистрация</div>
+
+          <input type="text" placeholder="Имя" [(ngModel)]="verifiableRegisterStudent.name" name="name">
+        <input type="text" placeholder="Фамилия" [(ngModel)]="verifiableRegisterStudent.surname" name="surname">
+        <input type="text" placeholder="Отчество" [(ngModel)]="verifiableRegisterStudent.patronymic"
+               name="patronymic">
+        <input type="text" placeholder="Номер телефона родителя" [(ngModel)]="verifiableRegisterStudent.parentContact"
+               name="parentContact">
+        <input type="text" placeholder="Домашний адрес" [(ngModel)]="verifiableRegisterStudent.address" name="address">
+        <input type="text" placeholder="Номер мобильного телефона" [(ngModel)]="verifiableRegisterStudent.phoneNumber"
+               name="phoneNumber">
+        <input type="text" placeholder="mail" [(ngModel)]="verifiableRegisterStudent.mail" name="mail">
+        <input type="text" placeholder="Номер зачетной книжки" [(ngModel)]="verifiableRegisterStudent.gradebookNumber"
+               name="gradebookNumber">
+        <input type="number" placeholder="Номер группы" [(ngModel)]="verifiableRegisterStudent.groupNumber"
+               name="groupNumber">
+        <input type="number" placeholder="Курс" [(ngModel)]="verifiableRegisterStudent.course" name="course">
+        <input type="password" placeholder="Пароль" [(ngModel)]="verifiableRegisterStudent.password" name="password">
+        <input type="password" placeholder="Повторите пароль" [(ngModel)]="verifiableRegisterStudent.confirmPassword"
+               name="confirm password">
+        <div class="auth-hint">
+          <div class="text">Уже зарегистрированы?</div>
+          <a [routerLink]="'/auth'">Войти</a>
+        </div>
+        <button type="submit">Отправить</button>
+        </fieldset>
+
+      </form>
+    </div>
+  </div>
+</div>
