frontend: added register, auth lecturer

--- a/web/schedule/src/app/component/auth-student/auth-student.component.html
+++ b/web/schedule/src/app/component/auth-student/auth-student.component.html
@@ -6,7 +6,7 @@
         <input type="text" placeholder="Номер зачётки" [(ngModel)]="authStudent.gradebookNumber" name="gradebookNumber">
         <input type="password" placeholder="Пароль" [(ngModel)]="authStudent.password" name="password">
         <div class="register-hint">
-          <div class="text">Еще не зарегистрированы?</div>
+          <div class="text">Не зарегистрированы?</div>
           <a [routerLink]="'/register/student'">Регистрация</a>
         </div>
         <button type="submit">Войти</button>
