--- a/web/schedule/src/app/component/home/home.component.html
+++ b/web/schedule/src/app/component/home/home.component.html
@@ -1,3 +1,24 @@
-<p>
-  home works!
-</p>
+<div class="content-container">
+  <fieldset class="clearfix">
+    <div class="text">Зайти как</div>
+    <div class="wrapper">
+      <div class="box1">
+        <img class="displayed" src="../../stud.png" height="150" width="150"/>
+      </div>
+      <div class="box2">
+        <img class="displayed" src="../../lect.png" height="150" width="150"/>
+      </div>
+      <div class="box3">
+        <a href="/auth/student">
+          <button>Студент</button>
+        </a>
+      </div>
+      <div class="box4">
+        <a href="/auth/lecturer">
+          <button>Преподаватель</button>
+        </a>
+      </div>
+
+    </div>
+  </fieldset>
+</div>
