--- a/web/schedule/src/app/component/register-student/register-student.component.html
+++ b/web/schedule/src/app/component/register-student/register-student.component.html
@@ -25,7 +25,7 @@
                name="confirm password">
         <div class="auth-hint">
           <div class="text">Уже зарегистрированы?</div>
-          <a [routerLink]="'/auth'">Войти</a>
+          <a [routerLink]="'/auth/student'">Войти</a>
         </div>
         <button type="submit">Отправить</button>
         </fieldset>
