--- a/web/schedule/src/app/component/auth-student/auth-student.component.scss
+++ b/web/schedule/src/app/component/auth-student/auth-student.component.scss
@@ -16,19 +16,19 @@ a:hover {
     margin: 0 5px;
 
     color: var(--dark);
-    font-size: 16px;
+    font-size: 20px;
   }
 
   a {
     color: var(--dark);
-    font-size: 16px;
+    font-size: 20px;
     text-decoration-line: underline;
   }
 }
 
 input {
   border: none;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.5em;
   padding: 0;
   -webkit-appearance: none;
@@ -38,7 +38,7 @@ p {
   line-height: 1.5em;
 }
 
-.clearfix { *zoom: 1;
+.clearfix { *zoom: 2;
   background: whitesmoke;
   max-width: 1000px;
   align-items: flex-start;
@@ -71,12 +71,13 @@ button {
   align-items: flex-start;
   margin: 0 auto;
   padding: 5px 5px;
-  background-image: url("../../auth.jpg");
-height: 610px;
+  height: 690px;
+  background-color: #f9f9f9;
+
 }
 .text{
   text-align: center;
-  font-size: 18px;
+  font-size: 26px;
   margin: 20px;
 }
 
@@ -132,7 +133,7 @@ height: 610px;
   background-color: #eaa9db;
   color: #340b38;
   margin-bottom: 2em;
-  font-size: 16px;
+  font-size: 20px;
   text-transform: uppercase;
   cursor:pointer;
   width: 280px;
