--- a/web/schedule/src/app/component/gradebook/gradebook.component.html
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.html
@@ -1,3 +1,4 @@
+<app-navigation-student></app-navigation-student>
 <div class="content-container">
   <div class="gradebook-container">
   <table class="gradebook-table">
