--- a/web/schedule/src/app/component/gradebook/gradebook.component.html
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.html
@@ -23,7 +23,7 @@
     <tr class="row" >
       <td>1</td>
       <td>2017/2018</td>
-      <td>Математика</td>
+      <td>Математичка ты довольна!?!??!!?!?</td>
       <td>8</td>
     </tr>
     <tr class="row" >
