--- a/web/schedule/src/app/component/gradebook/gradebook.component.scss
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.scss
@@ -1,5 +1,5 @@
 .content-container {
-  background-image: url("../../auth.jpg");
+  background-image: url("../../../assets/auth.jpg");
 
   overflow: hidden;
   padding: 5px 5px;
