--- a/web/schedule/src/app/component/home/home.component.scss
+++ b/web/schedule/src/app/component/home/home.component.scss
@@ -85,7 +85,7 @@
 
   .content {
 
-    background-image: url("../../auth.jpg");
+    background-image: url("../../../assets/auth.jpg");
     width: 100%;
   }
 }
