--- a/web/schedule/src/app/component/navigation-student/navigation-student.component.html
+++ b/web/schedule/src/app/component/navigation-student/navigation-student.component.html
@@ -1,11 +1,11 @@
 <div class="content-container">
 <div class="topnav">
 
-  <a class="active" href="/home">Я</a>
-  <a href="/group">Список группы</a>
-  <a href="/schedule">Расписание</a>
-  <a href="/presence">Пропуски</a>
-  <a href="/gradebook">Зачётка</a>
+  <a class="active" [routerLink]="'/home'">Я</a>
+  <a [routerLink]="'/group'">Список группы</a>
+  <a [routerLink]="'/schedule'">Расписание</a>
+  <a [routerLink]="'/presence'">Пропуски</a>
+  <a [routerLink]="'/gradebook'">Зачётка</a>
 
 </div>
 </div>
