--- a/web/schedule/src/app/app.component.scss
+++ b/web/schedule/src/app/app.component.scss
@@ -5,7 +5,7 @@
   align-items: flex-start;
   max-width: 1280px;
   min-height: calc(100vh - 50px);
-  background-image: url("auth.jpg");
+  background-image: url("../assets/auth.jpg");
 
   margin: 50px auto 0 auto;
 
@@ -14,7 +14,7 @@
 
   .content {
 
-    background-image: url("auth.jpg");
+    background-image: url("../assets/auth.jpg");
     width: 100%;
   }
 }
