--- a/web/schedule/src/app/component/home/home.component.html
+++ b/web/schedule/src/app/component/home/home.component.html
@@ -3,10 +3,10 @@
     <div class="text">Зайти как</div>
     <div class="wrapper">
       <div class="box1">
-        <img class="displayed" src="../../stud.png" height="150" width="150"/>
+        <img class="displayed" src="../../../assets/stud.png" height="150" width="150"/>
       </div>
       <div class="box2">
-        <img class="displayed" src="../../lect.png" height="150" width="150"/>
+        <img class="displayed" src="../../../assets/lect.png" height="150" width="150"/>
       </div>
       <div class="box3">
         <a href="/auth/student">
