added viewing marks in gradebook

--- a/web/schedule/src/app/component/auth-student/auth-student.component.scss
+++ b/web/schedule/src/app/component/auth-student/auth-student.component.scss
@@ -72,7 +72,7 @@ button {
   margin: 0 auto;
   padding: 5px 5px;
   height: 690px;
-  background-color: #f9f9f9;
+  background-image: url("../../../assets/auth.jpg");
 
 }
 .text{
