--- a/web/schedule/src/app/component/home/home.component.scss
+++ b/web/schedule/src/app/component/home/home.component.scss
@@ -6,7 +6,8 @@
   max-width: 1000px;
   min-height: calc(100vh - 50px);
   margin: 0 auto;
-
+  background-image: url("../../../assets/auth.jpg");
+  padding: 3%;
   a{
       border: none;
       padding: 10px;
