--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
@@ -1,10 +1,10 @@
 <div class="content-container">
   <div class="topnav">
 
-    <a class="active" href="/home">Я</a>
-    <a href="/group">Списки группы</a>
-    <a href="/schedule">Расписание</a>
-    <a href="/presence">Пропуски</a>
+    <a class="active" [routerLink]="'/home'">Я</a>
+    <a [routerLink]="'/group'">Списки группы</a>
+    <a [routerLink]="'/schedule'">Расписание</a>
+    <a [routerLink]="'/presence'">Пропуски</a>
 
   </div>
 </div>
