--- a/web/schedule/src/app/component/gradebook/gradebook.component.html
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.html
@@ -8,30 +8,13 @@
       <th>Предмет</th>
       <th>Оценка</th>
     </tr>
-    <tr class="row" >
-      <td>1</td>
-      <td>2017/2018</td>
-      <td>АЛОЦВМ</td>
-      <td>6</td>
+    <tr class="row" *ngFor="let a of assessments"  >
+      <td>{{a.session.semesterNumber}}</td>
+      <td>{{a.session.year}}</td>
+      <td>{{a.subject.name}}</td>
+      <td>{{a.mark}}</td>
     </tr>
-    <tr class="row" >
-      <td>1</td>
-      <td>2017/2018</td>
-      <td>ОАиП</td>
-      <td>9</td>
-    </tr>
-    <tr class="row" >
-      <td>1</td>
-      <td>2017/2018</td>
-      <td>Математичка ты довольна!?!??!!?!?</td>
-      <td>8</td>
-    </tr>
-    <tr class="row" >
-      <td>1</td>
-      <td>2017/2018</td>
-      <td>ОИТ</td>
-      <td>6</td>
-    </tr>
+
   </table>
 </div>
 </div>
