--- a/web/schedule/src/app/component/group/group.component.html
+++ b/web/schedule/src/app/component/group/group.component.html
@@ -3,13 +3,13 @@
   <div class="group-container">
 <table class="group-table">
   <tr>
-    <th>Id</th>
+    <th>№</th>
     <th>Фамилия</th>
     <th>Имя</th>
     <th>Отчество</th>
   </tr>
-  <tr class="row"  *ngFor="let s of students"  >
-    <td>{{s.id}}</td>
+  <tr class="row"  *ngFor="let s of students; let i = index"  >
+    <td>{{i+1}}</td>
     <td>{{s.personalCard.surname}}</td>
     <td>{{s.personalCard.name}}</td>
     <td>{{s.personalCard.patronymic}}</td>
