--- a/web/schedule/src/app/component/home/home.component.html
+++ b/web/schedule/src/app/component/home/home.component.html
@@ -9,12 +9,12 @@
         <img class="displayed" src="../../../assets/lect.png" height="150" width="150"/>
       </div>
       <div class="box3">
-        <a href="/auth/student">
+        <a [routerLink]="'auth/student'">
           <button>Студент</button>
         </a>
       </div>
       <div class="box4">
-        <a href="/auth/lecturer">
+        <a [routerLink]="'auth/lecturer'">
           <button>Преподаватель</button>
         </a>
       </div>
