--- a/web/schedule/src/app/component/register-student/register-student.component.scss
+++ b/web/schedule/src/app/component/register-student/register-student.component.scss
@@ -68,7 +68,7 @@ p {
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
-  background-color: #f9f9f9;
+  background-image:  url("../../../assets/auth.jpg");
   padding: 5px 5px;
   height: 690px;
 }
