--- a/web/schedule/src/app/component/navigation-student/navigation-student.component.scss
+++ b/web/schedule/src/app/component/navigation-student/navigation-student.component.scss
@@ -5,6 +5,7 @@
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
+  font-family: Courier, monospace;
 }
 
 /* Style the header links */
@@ -17,7 +18,7 @@
   font-size: 18px;
   line-height: 25px;
   border-radius: 5px;
-  width: 120px;
+  width: 150px;
 
 }
 
