--- a/web/schedule/src/app/component/navigation-student/navigation-student.component.html
+++ b/web/schedule/src/app/component/navigation-student/navigation-student.component.html
@@ -1,7 +1,7 @@
 <div class="content-container">
 <div class="topnav">
 
-  <a class="active" [routerLink]="'/home'">Я</a>
+  <a class="active" [routerLink]="'/feed/student'">Я</a>
   <a [routerLink]="'/group'">Список группы</a>
   <a [routerLink]="'/schedule'">Расписание</a>
   <a [routerLink]="'/presence'">Пропуски</a>
