--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
@@ -1,8 +1,8 @@
 <div class="content-container">
   <div class="topnav">
 
-    <a class="active" [routerLink]="'/home'">Я</a>
-    <a [routerLink]="'/group'">Списки группы</a>
+    <a class="active" [routerLink]="'/feed/lecturer'">Я</a>
+    <a >Списки групп </a>
     <a [routerLink]="'/schedule'">Расписание</a>
     <a [routerLink]="'/presence'">Пропуски</a>
 
