--- a/web/schedule/src/app/component/gradebook/gradebook.component.scss
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.scss
@@ -6,7 +6,7 @@
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
-  height: 600px;
+
 }
 
 .gradebook-container {
@@ -45,7 +45,10 @@ button{
   // optional - looks better for small cell values
   white-space: nowrap;
   border-spacing: 0;
-
+  input{
+    width: 100%;
+    height: 100%;
+  }
 
   th {
     padding: 12px 12px;
