--- a/web/schedule/src/app/component/schedule/schedule.component.scss
+++ b/web/schedule/src/app/component/schedule/schedule.component.scss
@@ -6,7 +6,7 @@
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
-  height: 600px;
+  height: 100%;
 
   .schedule-container{
     padding: 20px;
@@ -27,12 +27,19 @@
     white-space: nowrap;
     border-spacing: 0;
 
+    tr{
+      width: 100%;
+      padding: 6px 12px;
+      border: 1px solid #d9d7ce;
+      font-size: 20px;
+      text-align: left;
+    }
 
     th {
       padding: 6px 12px;
       border: 1px solid #d9d7ce;
       font-size: 20px;
-      text-align: left;
+      text-align: center;
     }
 
     .row {
@@ -41,11 +48,12 @@
       transition: border linear 2s;
 
       td {
-
         padding: 6px 12px;
         border: 1px solid #d9d7ce;
         font-size: 20px;
+
       }
+
     }
 
     .row:hover {
