--- a/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.scss
+++ b/web/schedule/src/app/component/auth-lecturer/auth-lecturer.component.scss
@@ -17,12 +17,16 @@ a:hover {
 
     color: var(--dark);
     font-size: 20px;
+    font-family: Garamond, monospace;
+
   }
 
   a {
     color: var(--dark);
     font-size: 20px;
     text-decoration-line: underline;
+    font-family: Garamond, monospace;
+
   }
 }
 
@@ -56,11 +60,14 @@ button {
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
-  margin: 20px;
+  margin: 30px;
+  padding: 10px;
   max-width: 100px;
   font-size: 16px;
   cursor:pointer;
   width: 280px;
+  font-family: Garamond, monospace;
+  font-weight: bold;
 }
 .clearfix:after { clear: both; }
 
@@ -71,20 +78,23 @@ button {
   align-items: flex-start;
   margin: 0 auto;
   padding: 5px 5px;
-  height: 690px;
   background-color: #f9f9f9;
+  min-height: calc(100vh - 50px);
+  background-image: url("../../../assets/auth.jpg");
 
 }
 .text{
   text-align: center;
   font-size: 26px;
   margin: 20px;
+  font-family: Garamond, monospace;
+
 }
 
 #login {
-
+  text-align: center;
   max-width: 1000px;
-  margin: 0 auto;
+  margin: 5% auto;
   flex-direction: column;
   justify-content: center;
   background-size: cover;
