--- a/web/schedule/src/app/component/feed-student/feed-student.component.scss
+++ b/web/schedule/src/app/component/feed-student/feed-student.component.scss
@@ -31,7 +31,7 @@
     color: var(--dark);
     font-size: 20px;
     padding: 10px;
-    font-family: Courier, monospace;
+    font-family: Garamond, monospace;
 
   }
 
@@ -40,7 +40,7 @@
     background: whitesmoke;
     max-width: 1000px;
     align-items: flex-start;
-    margin: 30px auto;
+    margin: 5% auto;
 
     .wrapper {
       margin: 20px auto;
