--- a/web/schedule/src/app/component/gradebook/gradebook.component.scss
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.scss
@@ -1,31 +1,33 @@
 .content-container {
   background-image: url("../../../assets/auth.jpg");
-
+  min-height: calc(100vh - 50px);
   overflow: hidden;
   padding: 5px 5px;
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
+  font-family: Garamond, monospace;
 
 }
 
 .gradebook-container {
   padding: 20px;
-text-align: center;
+  text-align: center;
+  height: 100%;
 }
 
-.register-form{
+.register-form {
   align-items: center;
 }
 
-button{
+button {
 
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   margin-bottom: 2em;
   font-size: 20px;
-  cursor:pointer;
+  cursor: pointer;
   width: 180px;
   height: 80px;
   margin: 20px;
@@ -45,7 +47,8 @@ button{
   // optional - looks better for small cell values
   white-space: nowrap;
   border-spacing: 0;
-  input{
+
+  input {
     width: 100%;
     height: 100%;
   }
