--- a/web/schedule/src/app/component/group/group.component.scss
+++ b/web/schedule/src/app/component/group/group.component.scss
@@ -1,15 +1,16 @@
 .content-container {
   background-image: url("../../../assets/auth.jpg");
-
+  min-height: calc(100vh - 50px);
   overflow: hidden;
   padding: 5px 5px;
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
-  height: 600px;
+  font-family: Garamond, monospace;
 
   .group-container{
     padding: 20px;
+    height: 100%;
   }
 
   .group-table {
