--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.scss
@@ -5,6 +5,7 @@
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
+  font-family: Garamond, monospace;
 }
 
 /* Style the header links */
