--- a/web/schedule/src/app/component/navigation-student/navigation-student.component.scss
+++ b/web/schedule/src/app/component/navigation-student/navigation-student.component.scss
@@ -5,7 +5,7 @@
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
-  font-family: Courier, monospace;
+  font-family: Garamond, monospace;
 }
 
 /* Style the header links */
