--- a/web/schedule/src/app/component/presence/presence.component.scss
+++ b/web/schedule/src/app/component/presence/presence.component.scss
@@ -1,32 +1,80 @@
-
 .content-container {
+  background-image: url("../../../assets/auth.jpg");
+  min-height: calc(100vh - 50px);
+  overflow: hidden;
+  padding: 5px 5px;
   max-width: 1000px;
   align-items: flex-start;
-  margin: 2% auto;
+  margin: 0 auto;
+  max-height: 100%;
+  font-family: Garamond, monospace;
 
-  .fc-four-rows .fc-row {
-    height: 25%;
-  }
-
-  .fc-five-rows .fc-row {
-    height: 20%;
-  }
-
-  .fc-six-rows .fc-row {
-    height: 16.66%;
-    height: -moz-calc(100% / 6);
-    height: -webkit-calc(100% / 6);
-    height: calc(100% / 6);
-  }
-
-  .fc-calendar .fc-row > div,
-  .fc-calendar .fc-head > div {
-    float: left;
-    height: 100%;
-    width: 14.28%; /* 100% / 7 */
-    width: -moz-calc(100% / 7);
-    width: -webkit-calc(100% / 7);
-    width: calc(100% / 7);
-    position: relative;
-  }
 }
+
+.presence-container {
+  padding: 20px;
+  text-align: center;
+  height: 100%;
+}
+
+.register-form{
+  align-items: center;
+}
+
+button{
+
+  border-radius: 3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  margin-bottom: 2em;
+  font-size: 20px;
+  cursor:pointer;
+  width: 180px;
+  height: 80px;
+  margin: 20px;
+}
+
+.presence-table {
+
+  width: 100%;
+  margin-top: 4px;
+  background: #fbfbfb;
+  border-collapse: collapse;
+  vertical-align: top;
+  max-width: 100%;
+
+  overflow-x: auto;
+
+  // optional - looks better for small cell values
+  white-space: nowrap;
+  border-spacing: 0;
+  input{
+    width: 100%;
+    height: 100%;
+  }
+
+  th {
+    padding: 12px 12px;
+    border: 1px solid #d9d7ce;
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .row {
+    cursor: pointer;
+
+    transition: border linear 2s;
+
+    td {
+      text-align: center;
+
+      padding: 12px 12px;
+      border: 1px solid #d9d7ce;
+      font-size: 18px;
+    }
+  }
+
+
+}
+
+
