--- a/web/schedule/src/app/component/register-lecturer/register-lecturer.component.scss
+++ b/web/schedule/src/app/component/register-lecturer/register-lecturer.component.scss
@@ -24,6 +24,8 @@ a:hover {
     color: var(--dark);
     font-size: 18px;
     text-decoration-line: underline;
+    font-family: Garamond, monospace;
+
   }
 }
 input {
@@ -42,18 +44,21 @@ p {
   background: whitesmoke;
   max-width: 1000px;
   align-items: flex-start;
-  margin: 0 auto;
-
+  margin: 3%;
+  text-align: center;
   button {
     align-self: center;
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     margin: 20px;
+    padding: 10px;
     max-width: 100px;
     font-size: 16px;
     cursor:pointer;
     width: 280px;
+    font-family: Garamond, monospace;
+    font-weight: bold;
   }
 } /* For IE 6/7 */
 .clearfix:before, .clearfix:after {
@@ -68,14 +73,17 @@ p {
   max-width: 1000px;
   align-items: flex-start;
   margin: 0 auto;
-  background-color: #f9f9f9;
+  background-image:  url("../../../assets/auth.jpg");
   padding: 5px 5px;
-  height: 690px;
+  height: 100%;
+  min-height: calc(100vh - 50px);
 }
 .text{
   text-align: center;
   font-size: 20px;
   margin: 20px;
+  font-family: Garamond, monospace;
+
 }
 
 
