--- a/web/schedule/src/app/component/register-student/register-student.component.scss
+++ b/web/schedule/src/app/component/register-student/register-student.component.scss
@@ -3,6 +3,7 @@
 a {
   color: #382e33;
   text-decoration: none;
+  font-family: Garamond, monospace;
 }
 
 a:hover {
@@ -15,7 +16,7 @@ a:hover {
 
   .text {
     margin: 0 5px;
-
+    font-family: Garamond, monospace;
     color: var(--dark);
     font-size: 18px;
   }
@@ -24,6 +25,7 @@ a:hover {
     color: var(--dark);
     font-size: 18px;
     text-decoration-line: underline;
+    font-family: Garamond, monospace;
   }
 }
 input {
@@ -36,24 +38,29 @@ input {
 
 p {
   line-height: 1.5em;
+  font-family: Garamond, monospace;
+
 }
 
 .clearfix { *zoom: 1;
   background: whitesmoke;
   max-width: 1000px;
   align-items: flex-start;
-  margin: 0 auto;
-
+  margin: 3%;
+  text-align: center;
   button {
     align-self: center;
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     margin: 20px;
+    padding: 10px;
     max-width: 100px;
     font-size: 16px;
     cursor:pointer;
     width: 280px;
+    font-family: Garamond, monospace;
+    font-weight: bold;
   }
 } /* For IE 6/7 */
 .clearfix:before, .clearfix:after {
@@ -70,12 +77,15 @@ p {
   margin: 0 auto;
   background-image:  url("../../../assets/auth.jpg");
   padding: 5px 5px;
-  height: 690px;
+  height: 100%;
+  min-height: calc(100vh - 50px);
+
 }
 .text{
   text-align: center;
   font-size: 20px;
   margin: 20px;
+  font-family: Garamond, monospace;
 }
 
 
