added group viewing by lecturer

--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
@@ -2,9 +2,8 @@
   <div class="topnav">
 
     <a class="active" [routerLink]="'/feed/lecturer'">Я</a>
-    <a >Списки групп </a>
+    <a [routerLink]="'/group/number'">Списки групп </a>
     <a [routerLink]="'/schedule'">Расписание</a>
-    <a [routerLink]="'/presence'">Пропуски</a>
 
   </div>
 </div>
