--- a/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
+++ b/web/schedule/src/app/component/navigation-lecturer/navigation-lecturer.component.html
@@ -3,7 +3,7 @@
 
     <a class="active" [routerLink]="'/feed/lecturer'">Я</a>
     <a [routerLink]="'/group/number'">Списки групп </a>
-    <a [routerLink]="'/schedule'">Расписание</a>
+    <a [routerLink]="'/group/schedule'">Расписание</a>
 
   </div>
 </div>
