--- a/web/schedule/src/app/component/register-student/register-student.component.html
+++ b/web/schedule/src/app/component/register-student/register-student.component.html
@@ -22,7 +22,7 @@
         <input type="number" placeholder="Курс" [(ngModel)]="verifiableRegisterStudent.course" name="course">
         <input type="password" placeholder="Пароль" [(ngModel)]="verifiableRegisterStudent.password" name="password">
         <input type="password" placeholder="Повторите пароль" [(ngModel)]="verifiableRegisterStudent.confirmPassword"
-               name="confirm password">
+               name="confirmPassword">
         <div class="auth-hint">
           <div class="text">Уже зарегистрированы?</div>
           <a [routerLink]="'/auth/student'">Войти</a>
