--- a/web/schedule/src/app/component/gradebook/gradebook.component.scss
+++ b/web/schedule/src/app/component/gradebook/gradebook.component.scss
@@ -21,7 +21,7 @@
 }
 
 button {
-
+  background-color: rgb(255, 231, 251);
   border-radius: 3px;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
@@ -31,6 +31,8 @@ button {
   width: 180px;
   height: 80px;
   margin: 20px;
+  font-family: Garamond, monospace;
+  font-weight: bold;
 }
 
 .gradebook-table {
@@ -58,8 +60,11 @@ button {
     border: 1px solid #d9d7ce;
     font-size: 18px;
     text-align: center;
+    width: 300px;
   }
-
+  .row:hover{
+    background-color: #9c6ea6;
+  }
   .row {
     cursor: pointer;
 
@@ -67,7 +72,7 @@ button {
 
     td {
       text-align: center;
-
+      width: 300px;
       padding: 12px 12px;
       border: 1px solid #d9d7ce;
       font-size: 18px;
